# fastset-rpc-docs

./: json-rpc.md
client_examples/: .prettierrc  README.md  fastset-types.ts  index.ts  package-lock.json  package.json  proxy-json-rpc.md  tsconfig.json
docs/proxy/: rpc.md
docs/validator/: rpc.md
rust-examples/: Cargo.toml
rust-examples/src/: api.rs  client.rs  fastset_types.rs  main.rs
typescript-examples/: package-lock.json  tsconfig.json
